TG-26 Rewrite admin interface using Angular
Started rewrite of the admin interface. Starting with the font overview and font details
