# admin/api/router.go
@@ -11,6 +11,15 @@ import (
 	"github.com/zitadel/zitadel-go/v3/pkg/zitadel"
 )
 
+func contentTypeJson() func(next http.Handler) http.Handler {
+	return func(next http.Handler) http.Handler {
+		return http.HandlerFunc(func(w http.ResponseWriter, req *http.Request) {
+			w.Header().Set("Content-Type", "application/json")
+			next.ServeHTTP(w, req)
+		})
+	}
+}
+
 func SetupAdminApiRouter(router *mux.Router) {
 	ctx := context.Background()
 	authN, err := authentication.New(ctx, zitadel.New(config.LoadedConfiguration.OpenIDDomain), config.LoadedConfiguration.EncryptionKey,
@@ -22,23 +31,23 @@ func SetupAdminApiRouter(router *mux.Router) {
 
 	mw := authentication.Middleware(authN)
 
-	router.Methods("GET").Path("/api/admin/font/all").Handler(mw.RequireAuthentication()(http.HandlerFunc(getAllFonts)))
-	router.Methods("GET").Path("/api/admin/font/google").Handler(mw.RequireAuthentication()(http.HandlerFunc(getGoogleFonts)))
-	router.Methods("GET").Path("/api/admin/font/custom").Handler(mw.RequireAuthentication()(http.HandlerFunc(getCustomFonts)))
-	router.Methods("POST").Path("/api/admin/font").Handler(mw.RequireAuthentication()(http.HandlerFunc(createFont)))
-	router.Methods("GET").Path("/api/admin/font/{fontName}").Handler(mw.RequireAuthentication()(http.HandlerFunc(getFontByName)))
-	router.Methods("PUT").Path("/api/admin/font/{fontName}").Handler(mw.RequireAuthentication()(http.HandlerFunc(updateFont)))
-	router.Methods("DELETE").Path("/api/admin/font/{fontName}").Handler(mw.RequireAuthentication()(http.HandlerFunc(deleteFont)))
+	router.Methods("GET").Path("/api/admin/font/all").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getAllFonts))))
+	router.Methods("GET").Path("/api/admin/font/google").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getGoogleFonts))))
+	router.Methods("GET").Path("/api/admin/font/custom").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getCustomFonts))))
+	router.Methods("POST").Path("/api/admin/font").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(createFont))))
+	router.Methods("GET").Path("/api/admin/font/{fontName}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getFontByName))))
+	router.Methods("PUT").Path("/api/admin/font/{fontName}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(updateFont))))
+	router.Methods("DELETE").Path("/api/admin/font/{fontName}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(deleteFont))))
 
-	router.Methods("GET").Path("/api/admin/font/{fontName}/file").Handler(mw.RequireAuthentication()(http.HandlerFunc(getFontFiles)))
-	router.Methods("POST").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.RequireAuthentication()(http.HandlerFunc(createFontFile)))
-	router.Methods("PUT").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.RequireAuthentication()(http.HandlerFunc(updateFontFile)))
-	router.Methods("DELETE").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.RequireAuthentication()(http.HandlerFunc(deleteFontFile)))
+	router.Methods("GET").Path("/api/admin/font/{fontName}/file").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getFontFiles))))
+	router.Methods("POST").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(createFontFile))))
+	router.Methods("PUT").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(updateFontFile))))
+	router.Methods("DELETE").Path("/api/admin/font/{fontName}/file/{fontWeight}.{fontStyle}.{fontType}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(deleteFontFile))))
 
-	router.Methods("GET").Path("/api/admin/font/{fontName}/designer").Handler(mw.RequireAuthentication()(http.HandlerFunc(getFontDesigners)))
-	router.Methods("POST").Path("/api/admin/font/{fontName}/designer").Handler(mw.RequireAuthentication()(http.HandlerFunc(createFontDesigner)))
-	router.Methods("DELETE").Path("/api/admin/font/{fontName}/designer/{designerName}").Handler(mw.RequireAuthentication()(http.HandlerFunc(deleteFontDesigner)))
+	router.Methods("GET").Path("/api/admin/font/{fontName}/designer").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getFontDesigners))))
+	router.Methods("POST").Path("/api/admin/font/{fontName}/designer").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(createFontDesigner))))
+	router.Methods("DELETE").Path("/api/admin/font/{fontName}/designer/{designerName}").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(deleteFontDesigner))))
 
-	router.Methods("GET").Path("/api/admin/settings").Handler(mw.RequireAuthentication()(http.HandlerFunc(getSettings)))
-	router.Methods("PUT").Path("/api/admin/settings").Handler(mw.RequireAuthentication()(http.HandlerFunc(updateSettings)))
+	router.Methods("GET").Path("/api/admin/settings").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(getSettings))))
+	router.Methods("PUT").Path("/api/admin/settings").Handler(mw.CheckAuthentication()(contentTypeJson()(http.HandlerFunc(updateSettings))))
 }
